--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,22 +24,13 @@
             android:name=".Score"
             android:exported="false" />
         <activity
-            android:name=".Quiz5"
+            android:name=".Quiz"
             android:exported="false" />
         <activity
-            android:name=".Quiz4"
-            android:exported="false" />
-        <activity
-            android:name=".Quiz3"
-            android:exported="false" />
-        <activity
-            android:name=".Quiz2"
+            android:name=".HomePage"
             android:exported="false" />
         <activity
             android:name=".Register"
-            android:exported="false" />
-        <activity
-            android:name=".Quiz1"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
